# swift

./: .clang-format  CMakeLists.txt
include/ext/: array_view  optional  string_view
include/swift/compiler/: target_info.hh  target_options.hh
include/swift/diagnostics/: consumer.hh  diagnostic_info.hh  diagnostics.hh  engine.hh  ids.hh
include/swift/lexer/: identifier-table.hh  lexer.hh  location.hh  token.hh  tokens.def
include/swift/parser/: parser.hh  result.hh
include/swift/semantic/: access.hh  analyzer.hh  capture_type.hh  import_kind.hh  magic_literal_type.hh  scope.hh  type.hh
include/swift/support/: debug.hh  error-handling.hh  iterator-range.hh  tribool.hh  u32string_map.hh  ucs4-support.hh  visitor.hh
include/swift/syntax/: array-literal-expression.hh  assignment-expression.hh  ast_consumer.hh  boolean-literal-expression.hh  branch-statement.hh  break-statement.hh  build-configuration-statement.hh  checked-cast-expression.hh  class-declaration.hh  closure-expression.hh  compiler-control-statement.hh  conditional-checked-cast-expression.hh  conditional-expression.hh  constant-declaration.hh  context.hh  continue-statement.hh  control-transfer-statement.hh  declaration-context.hh  declaration-reference-expression.hh  declaration.hh  declaration_group.hh  defer-statement.hh  deinitializer-declaration.hh  dictionary-literal-expression.hh  do-statement.hh  dynamic-type-expression.hh  enum-declaration.hh  enumeration_element_declaration.hh  explicit-member-expression.hh  expression.hh  extension-declaration.hh  fallthrough-statement.hh  floating-point-literal-expression.hh  for-in-statement.hh  for-statement.hh  forced-value-expression.hh  function-call-expression.hh  function-declaration.hh  guard-statement.hh  if-statement.hh  (+59 more)
lib/compiler/: target_info.cc
lib/diagnostics/: consumer.cc  diagnostic_info.cc  diagnostics.cc  engine.cc
lib/lexer/: identifier-table.cc  lexer.cc  location.cc  token.cc
lib/parser/: parser.cc
lib/semantics/: access.cc  analyzer.cc
lib/support/: error-handling.cc  u32string_map.cc  ucs4-support.cc
lib/syntax/: array-literal-expression.cc  break-statement.cc  build-configuration-statement.cc  constant-declaration.cc  context.cc  continue-statement.cc  declaration-context.cc  declaration.cc  defer-statement.cc  enumeration_element_declaration.cc  expression.cc  fallthrough-statement.cc  for-in-statement.cc  for-statement.cc  forced-value-expression.cc  if-statement.cc  labelled-statement.cc  line-control-statement.cc  pattern.cc  printer.cc  repeat-while-statement.cc  return-statement.cc  source-file.cc  statement.cc  statements.cc  switch-statement.cc  type-array.cc  type-composite.cc  type-dictionary.cc  type-function.cc  type-identifier.cc  type-inout.cc  type-metatype.cc  type-tuple.cc  type.cc  while-statement.cc
tools/swifti/: interpreter.cc  interpreter.hh  line-editor.cc  line-editor.hh  stream.cc  stream.hh  swifti.cc
